src/test/ui/issues/30000-39999/issue-36082.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-36082.rs:8:19
   |
LL |     let val: &_ = x.borrow().0;
   |                   ^^^^^^^^^^  - temporary value is freed at the end of this statement
   |                   |
   |                   creates a temporary which is freed while still in use
...
LL |     println!("{}", val);
   |                    --- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
